--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	</style>
 <div 	class="whole">
 	<header class="head">
-		<a href="./home.html">Home</a>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeONUtD5wh-Unv-SToe1lhjRZp5l_A6-LpC_i8PauLTuESplQ/viewform?usp=publish-editor">Rate</a>
 		<a href="./product.html">Products</a>
 		<a href="./recips.html">Recips</a>
 		<a href="./about.html">About</a>
@@ -258,4 +258,5 @@ a juicy grilled beef</p>
 	</div>
 </div>
 </body>
+
 </html>
