--- a/index.html
+++ b/index.html
@@ -182,11 +182,10 @@
 	</style>
 <div 	class="whole">
 	<header class="head">
-		<a href="./home.html">Home</a>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSeONUtD5wh-Unv-SToe1lhjRZp5l_A6-LpC_i8PauLTuESplQ/viewform?usp=publish-editor">Home</a>
 		<a href="./product.html">Products</a>
 		<a href="./recips.html">Recips</a>
 		<a href="./about.html">About</a>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSeONUtD5wh-Unv-SToe1lhjRZp5l_A6-LpC_i8PauLTuESplQ/viewform?usp=publish-editor">Rate</a>
         <button class="butt1 one"> <a href="./form.html">Login</a></button>
         <button class="butt2 one"> <a href="./test.html">Sign Up</a></button>
 	</header>
@@ -261,5 +260,6 @@ a juicy grilled beef</p>
 </body>
 
 </html>
+
 
 
