--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ a juicy grilled beef</p>
 				<div class="star">⭐⭐⭐⭐⭐
 		</div>
 				<img src="./4.png">
-				<h1>Double Burger</h>
+				<h1>Taj Chilli Burger</h>
 			<p>A classic burger is a timeless favorite made with
 a juicy grilled beef</p>
 <div class="b8"><button>-<b>0</b>+</button>
@@ -240,7 +240,7 @@ a juicy grilled beef</p>
 			<div class="star">⭐⭐⭐⭐⭐
 		</div>
 				<img src="./2.png">
-				<h1>Double Burger</h>
+				<h1>Green Burger</h>
 			<p>A classic burger is a timeless favorite made with
 a juicy grilled beef</p>
 <div class="b8"><button>-<b>0</b>+</button>
@@ -250,7 +250,7 @@ a juicy grilled beef</p>
  	<div class="star">⭐⭐⭐⭐⭐
 		</div>
 				<img src="./2.png">
-				<h1>Double Burger</h>
+				<h1>Healthy Burger</h>
 			<p>A classic burger is a timeless favorite made with
 a juicy grilled beef</p>
 <div class="b8"><button>-<b>0</b>+</button>
@@ -261,6 +261,7 @@ a juicy grilled beef</p>
 </body>
 
 </html>
+
 
 
 
