--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 		.head a:hoverhover {
     text-decoration: underline;
 }
+		a:hover{ text-decoration:underline;
+		
 		.butt1{background-color: orangered;
 			border-radius: 20px;
 		}
@@ -261,6 +263,7 @@ a juicy grilled beef</p>
 </body>
 
 </html>
+
 
 
 
